--- a/CoCarroApp/CoCarroApp/CoCarroApp.csproj
+++ b/CoCarroApp/CoCarroApp/CoCarroApp.csproj
@@ -55,6 +55,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="player.cs" />
+    <Compile Include="PlayInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
